Fixed the generic styles 'nogaps-size' for containers and fixed layout paddings at contactInfo #1041

--- a/app/source/css/utils/bs-extensions.styl
+++ b/app/source/css/utils/bs-extensions.styl
@@ -216,20 +216,23 @@ ResetSectionTitleMargin() {
         margin-right: 0;
     }
 }
-.container {
+.container,
+.container-fluid {
     @media $mediaMaxXs {
         &.nogaps-xs {
             padding: 0;
             ResetSectionTitleMargin();
         }
     }
-    @media $mediaMaxSm {
+    $mediaOnly = $mediaMinSm + ' and ' + $mediaMaxSm;
+    @media $mediaOnly {
         &.nogaps-sm {
             padding: 0;
             ResetSectionTitleMargin();
         }
     }
-    @media $mediaMaxMd {
+    $mediaOnly = $mediaMinMd + ' and ' + $mediaMaxMd;
+    @media $mediaOnly {
         &.nogaps-md {
             padding: 0;
             ResetSectionTitleMargin();
